<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>opengv</name>
  <version>0.0.0</version>
  <description>
    OpenGV is a collection of computer vision methods for solving geometric vision problems.
  </description>
  <maintainer email="kneip.laurent@gmail.com">Laurent Kneip</maintainer>
  <license>FreeBSD</license>

  <buildtool_depend>cmake</buildtool_depend>
  
  <build_depend>eigen</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
